samples/_failures_safe/1761715213_66226a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e1e53908.c: In function ‘dfs_find_path’:
./samples/SAFE/__tmp_e1e53908.c:156:9: error: expected ‘;’ at end of input
  156 |     path
      |         ^
      |         ;
./samples/SAFE/__tmp_e1e53908.c:156:5: error: expected declaration or statement at end of input
  156 |     path
      |     ^~~~
